# chokepoint

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile
cli/: Cargo.toml
cli/src/: main.rs
examples/: graph.rs  hello.rs  simple.rs  sink.rs  stream.rs
src/: bandwidth_limiter.rs  item.rs  latency.rs  lib.rs  payload.rs  settings.rs  sink.rs  stream.rs  test_sink.rs  time.rs  traffic_shaper.rs
test-helpers/: Cargo.toml
test-helpers/src/: lib.rs  payload.rs  sink.rs
tests/: sink.rs  stream.rs
