[package]
name = "chokepoint"
version = "0.2.0"
edition = "2021"

authors = ["Robert Krahn <robert@hyper.video>"]
categories = ["simulation", "network-programming", "asynchronous"]
homepage = "https://github.com/hypervideo/chokepoint"
keywords = ["network", "congestion", "traffic", "simulation"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/hypervideo/chokepoint"
description = "Generic stream transformer to simulate traffic / network congestion"

[dependencies]
burster = "0.1.1"
bytes = "1.8.0"
chrono = "0.4.38"
futures = "0.3.31"
pin-project = "1.1.7"
rand = "0.8.5"
rand_distr = "0.4.3"
tokio-stream = { version = "0.1.16", features = ["sync"] }
tracing = "0.1.40"
wasmtimer = "0.4.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.41.1", features = ["time", "sync"] }
tokio-util = { version = "0.7.12", features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.41.1", features = ["sync"] }
wasmtimer = "0.4.1"

[dev-dependencies]
color-eyre = "0.6.3"
tokio = { version = "1.41.1", features = ["time", "sync", "rt-multi-thread", "macros"] }
tokio-test = "0.4.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
