[workspace]
resolver = "2"
members = ["cli", "test-helpers"]

[workspace.dependencies]
burster = "0.1.1"
bytes = "1.8.0"
chokepoint = { path = "." }
chokepoint-test-helpers = { path = "./test-helpers" }
chrono = "0.4.38"
futures = "0.3.31"
pin-project = "1.1.7"
rand = "0.8.5"
rand_distr = "0.4.3"
tokio = { version = "1.41.1", default-features = false }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wasmtimer = "0.4.1"

[package]
name = "chokepoint"
version = "0.2.0"
edition = "2021"

authors = ["Robert Krahn <robert@hyper.video>"]
categories = ["simulation", "network-programming", "asynchronous"]
homepage = "https://github.com/hypervideo/chokepoint"
keywords = ["network", "congestion", "traffic", "simulation"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/hypervideo/chokepoint"
description = "Generic stream transformer to simulate traffic / network congestion"

[dependencies]
burster.workspace = true
bytes.workspace = true
futures.workspace = true
pin-project.workspace = true
rand.workspace = true
rand_distr.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["time", "sync"] }
tokio-util = { workspace = true, features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync"] }
wasmtimer.workspace = true

[dev-dependencies]
chokepoint-test-helpers.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["time", "sync", "rt-multi-thread", "macros"] }
tokio-test = "0.4.4"
tracing-subscriber.workspace = true
yare = "3.0.0"
