[package]
name = "chokepoint-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chokepoint"
path = "src/main.rs"

[dependencies]
bytesize = "1.3.0"
chokepoint.workspace = true
chokepoint-test-helpers.workspace = true
chrono.workspace = true
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
futures.workspace = true
tokio = { workspace = true, features = ["time", "sync", "rt-multi-thread", "macros"] }
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
